# cathode

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  app.py  batch_regenerate.py  bettube_studio_mcp_server.py  cathode_mcp_server.py  compose.yaml  generate_brain_diagrams.py  generate_brain_views.py  generate_project_assets.sh  generate_template_backgrounds.py  index.html  nba-predict.md  pyproject.toml  pytest.ini  requirements-local-image.txt  requirements.txt  start.sh
.claude/: launch.json
.infosec-servicehub-requests/: handbrake-cli-1.11.2-request-plan.json  handbrake-cli-1.11.2-request-plan.md
.streamlit/: config.toml
core/: AGENTS.md  __init__.py  agent_demo.py  branding.py  composition_planner.py  costs.py  demo_assets.py  demo_capture_plan.py  demo_review.py  demo_session.py  director.py  director_golden.py  image_gen.py  intake.py  job_runner.py  local_image_gen.py  pipeline_service.py  project_schema.py  project_store.py  rate_limiter.py  remotion_render.py  runtime.py  scene_review.py  short_form.py  treatment_planner.py  video_assembly.py  video_gen.py  voice_gen.py  workflow.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PLAN.md  bettube-studio-workflow-behind-scenes.html  cathode-workflow-behind-scenes.html  demo-brief.md  qeeg-node-ui-scratchpad-2026-06-01.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
prompts/: AGENTS.md  director_capability_clinical_data_authored_stills.txt  director_capability_composition_hybrid.txt  director_capability_composition_motion_only.txt  director_capability_data_stage.txt  director_capability_multi_voice.txt  director_capability_short_form_vertical.txt  director_system.txt  (+12 more)
(+355 files in other folders)
