[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bettube-studio"
version = "0.1.0"
description = "Local-first explainer-video pipeline with Streamlit, React/FastAPI, and MCP surfaces."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Core runtime dependencies (formerly requirements.txt). No registry URL is pinned
# here; uv/pip honor UV_INDEX_URL / PIP_INDEX_URL / PIP_EXTRA_INDEX_URL from the
# environment so this drops into an approved-mirror corp workflow unchanged.
dependencies = [
    "streamlit>=1.28.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "replicate>=0.25.0",
    "requests>=2.28.0",
    "kokoro>=0.9.4",
    "soundfile>=0.12.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "mcp>=1.12.4,<2.0.0",
    "pylatexenc>=2.10",
    "truststore>=0.10.4",
]

[project.optional-dependencies]
# React/FastAPI backend extras (formerly server/requirements.txt).
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
]
# Local Hugging Face / torch image generation (formerly requirements-local-image.txt).
local-image = [
    "torch",
    "transformers>=4.57.0",
    "accelerate",
    "safetensors",
    "sentencepiece",
    "diffusers==0.35.1",
]
# Test tooling.
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
# Flat collection of top-level modules plus the core/ and server/ packages, not a
# single importable distribution package. Limit discovery so the build backend does
# not try to package app.py / scripts / frontend / projects.
packages = ["core", "server"]
